src/objects/HPP_MI__c.object
<CustomObject>
    <fields>
        <fullName>AHT__c</fullName>
        <formula>Valuation_Instructed__c - Submitted_to_Credit__c</formula>
        <label>AHT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountWithIBBID__c</fullName>
        <formula>Account_with_IBB__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountWithIBBID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_with_IBB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account with IBB</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>HPP MI</relationshipLabel>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Achieved__c</fullName>
        <formula>HPP_Balance__c  /  Target_Value__c  * 100</formula>
        <label>% Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date_v1__c</fullName>
        <formula>Actual_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Completion Date v1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address1and2__c</fullName>
        <formula>Address_Line_1__c+&quot;, &quot;+ Address_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address1and2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_Amount__c</fullName>
        <label>Admin Fee Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_Paid__c</fullName>
        <label>Admin Fee Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is used to record which member of REAT the application owner is.</inlineHelpText>
        <label>Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advance_to_Solicitors__c</fullName>
        <label>Advance to Solicitors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advised_Sale__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>For use with HPP FSA return report</description>
        <inlineHelpText>N: No</inlineHelpText>
        <label>Advised Sale</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Monthly_Rental_Income__c</fullName>
        <label>Anticipated Monthly Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Received_to_Valuation_Instructed__c</fullName>
        <formula>Valuation_Instructed__c  - Submitted_to_Credit__c</formula>
        <label>App Received to Valuation Instructed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <label>Archived</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <description>FOR SALES USE ONLY TO DETERMINE THE CHANNEL THE LEAD ORIGINATED FROM THAT RESULTED IN A DRAWDOWN</description>
        <inlineHelpText>SALES USE ONLY</inlineHelpText>
        <label>Asset Sale Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Centre</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Online Direct</fullName>
                </value>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                </value>
                <value>
                    <fullName>Agencies</fullName>
                </value>
                <value>
                    <fullName>GCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDMID__c</fullName>
        <formula>BDM_for_letters__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDMID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ali Chami</fullName>
                </value>
                <value>
                    <fullName>Ali Vania</fullName>
                </value>
                <value>
                    <fullName>Esmail Jesset</fullName>
                </value>
                <value>
                    <fullName>Fezal Boodhoo</fullName>
                </value>
                <value>
                    <fullName>Haydor Ali</fullName>
                </value>
                <value>
                    <fullName>Ihab Al-Derzi</fullName>
                </value>
                <value>
                    <fullName>Imbraz Uddin</fullName>
                </value>
                <value>
                    <fullName>Imran Mustafa</fullName>
                </value>
                <value>
                    <fullName>Junaid Sarwar</fullName>
                </value>
                <value>
                    <fullName>Mehwish Mirza</fullName>
                </value>
                <value>
                    <fullName>Mohammed Kola</fullName>
                </value>
                <value>
                    <fullName>MU</fullName>
                </value>
                <value>
                    <fullName>Muhammad Shaikh</fullName>
                </value>
                <value>
                    <fullName>Naveed Muzaffar</fullName>
                </value>
                <value>
                    <fullName>Omar Nadhmi</fullName>
                </value>
                <value>
                    <fullName>Raadi Choudhury</fullName>
                </value>
                <value>
                    <fullName>Rizwan Ali</fullName>
                </value>
                <value>
                    <fullName>Sagheer Malik</fullName>
                </value>
                <value>
                    <fullName>Saquib Ismail</fullName>
                </value>
                <value>
                    <fullName>Shaheen Bandali</fullName>
                </value>
                <value>
                    <fullName>Shamim ChowDavid Harrisury</fullName>
                </value>
                <value>
                    <fullName>Shamim Chowdhury</fullName>
                </value>
                <value>
                    <fullName>Shazia Tabusam</fullName>
                </value>
                <value>
                    <fullName>Sohaib Bin Hamid</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Zeg Hussain</fullName>
                </value>
                <value>
                    <fullName>Suly Mohmed</fullName>
                </value>
                <value>
                    <fullName>Farukh Qurban</fullName>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                </value>
                <value>
                    <fullName>Mariam Bhamla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDM_for_letters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>BDM for letters such as abandonment letter</inlineHelpText>
        <label>BDM for letters</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_MI2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDM_telephone_no_for_letters__c</fullName>
        <formula>BDM_for_letters__r.Phone</formula>
        <label>BDM telephone no for letters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTL_Fee_Amount__c</fullName>
        <label>BTL Fee Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Fee_Paid__c</fullName>
        <label>BTL Fee Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BTL_Monthly_Repayment__c</fullName>
        <label>BTL Monthly Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Type__c</fullName>
        <label>BTL Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_HPP__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Rent Only</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Board_Limits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Limits</label>
        <referenceTo>Board_Limits_v1__c</referenceTo>
        <relationshipLabel>HPP MI</relationshipLabel>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPF_Arrangement_Fee_Amount__c</fullName>
        <label>CPF Arrangement Fee Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Customer_Name__c</fullName>
        <label>CPF Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Abandoned_v1__c</fullName>
        <label>Case Abandoned v1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_inactive_date__c</fullName>
        <label>Case inactive date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_status__c</fullName>
        <label>Case status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_BTL_Repayment_Figure__c</fullName>
        <label>Confirmed BTL Repayment Figure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed_Monthly_Rental_Cover__c</fullName>
        <formula>Confirmed_Monthly_Rental_Income__c / Confirmed_BTL_Repayment_Figure__c</formula>
        <label>Confirmed Monthly Rental Cover %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confirmed_Monthly_Rental_Income__c</fullName>
        <label>Confirmed Monthly Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Comments__c</fullName>
        <label>Construction Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_at_Solicitor__c</fullName>
        <label>Contact at Solicitor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Stage__c</fullName>
        <label>Credit Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pre Val (Authorised)</fullName>
                </value>
                <value>
                    <fullName>Pre Val (Declined)</fullName>
                </value>
                <value>
                    <fullName>Pre Val (FI)</fullName>
                </value>
                <value>
                    <fullName>Val Inst</fullName>
                </value>
                <value>
                    <fullName>Val Rcvd</fullName>
                </value>
                <value>
                    <fullName>Post Val (Authorised)</fullName>
                </value>
                <value>
                    <fullName>Post Val (Declined)</fullName>
                </value>
                <value>
                    <fullName>Post Val (FI)</fullName>
                </value>
                <value>
                    <fullName>Offer Printed</fullName>
                </value>
                <value>
                    <fullName>Offer Sent</fullName>
                </value>
                <value>
                    <fullName>Offer Returned</fullName>
                </value>
                <value>
                    <fullName>IBB Solicitor Confirmation</fullName>
                </value>
                <value>
                    <fullName>Original Offer sent to IBB Solicitor</fullName>
                </value>
                <value>
                    <fullName>ROT Rcvd</fullName>
                </value>
                <value>
                    <fullName>ROT (Authorised)</fullName>
                </value>
                <value>
                    <fullName>ROT (FI)</fullName>
                </value>
                <value>
                    <fullName>ROT (Declined)</fullName>
                </value>
                <value>
                    <fullName>Funds Released</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                    <color>#F3D904</color>
                    <label>Abandoned</label>
                </value>
                <value>
                    <fullName>Redeemed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_FTV__c</fullName>
        <formula>HPP_Balance__c  /  Valuation_Figure__c</formula>
        <label>Current FTV %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <formula>Primary_Customer_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Updates__c</fullName>
        <label>Customer Updates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_update_indicator__c</fullName>
        <formula>IF( Customer_Updates__c    &lt;=  today() , IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;&quot;), &quot;&quot;
)</formula>
        <label>Customer update indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Funds_Sent__c</fullName>
        <label>Date Funds Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Redeemed__c</fullName>
        <label>Date Redeemed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Valuation_Booked__c</fullName>
        <label>Date Valuation Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Valuation_Fee_Paid__c</fullName>
        <label>Date Valuation Fee Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_abandonment_letter_sent__c</fullName>
        <label>Date abandonment letter sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <formula>Primary_Customer_Name__r.Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_birth_of_main_applicant__c</fullName>
        <formula>Primary_Customer_Name__r.Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of birth of main applicant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_solicitor_s_fees_paid__c</fullName>
        <label>Date solicitor&apos;s fees paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_2nd_Offer_Letter_Sent__c</fullName>
        <formula>TODAY () - X2nd_Offer_Letter_Sent__c</formula>
        <label>Days Since 2nd Offer Letter Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Offer_Letter_Sent__c</fullName>
        <formula>TODAY() - Offer_Letter_Sent__c</formula>
        <label>Days Since Offer Letter Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Submitted_to_Credit__c</fullName>
        <formula>IF(ISNULL(Actual_Completion_Date__c ), TODAY() - Submitted_to_Credit__c, Actual_Completion_Date__c - Submitted_to_Credit__c )</formula>
        <label>Days Since Submitted to Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_valuation_received__c</fullName>
        <formula>TODAY() -  Valuation_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since valuation received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drawdown_Weekly_Target__c</fullName>
        <formula>Board_Limits__r.Drawdown_Weekly_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawdown Weekly Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employment_Board_Limit__c</fullName>
        <label>Employment Board Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employment_Sector__c</fullName>
        <label>Employment Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Advertising,Public Relations and Marketing</fullName>
                </value>
                <value>
                    <fullName>Aerospace and Defence</fullName>
                </value>
                <value>
                    <fullName>Agriculture, Forestry and Fishing</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Arts and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation and Airlines</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Clergy</fullName>
                </value>
                <value>
                    <fullName>Construction and Installation</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy and Utilities</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Facilities, Maintenance and Repair</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Fire, Law Enforcement and Security</fullName>
                </value>
                <value>
                    <fullName>Food,Beverage and Tobacco</fullName>
                </value>
                <value>
                    <fullName>Government and Local  Authority</fullName>
                </value>
                <value>
                    <fullName>Graphic Arts</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Administrative</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Nursing</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Practitioners</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Technicians</fullName>
                </value>
                <value>
                    <fullName>Hotel,Gaming,Leisure and Travel</fullName>
                </value>
                <value>
                    <fullName>Humans Resources</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_status__c</fullName>
        <inlineHelpText>Entry must be one of:                                              
E: Employed
S: Self-employed
R: Retired
O: Other</inlineHelpText>
        <label>Employment status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enter_Product__c</fullName>
        <description>To be used on HPP MI to allow the user to manually enter the product type.</description>
        <label>Product M</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <formula>Offer_Letter_Sent__c  +  Board_Limits__r.Estimated_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTV__c</fullName>
        <formula>Finance_Required__c / Property_Value__c</formula>
        <label>FTV:%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Filed__c</fullName>
        <label>Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Period_Years__c</fullName>
        <label>Finance Period (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Rate__c</fullName>
        <label>Finance Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finance_Required__c</fullName>
        <label>Finance Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Firm_FSA_Ref__c</fullName>
        <defaultValue>&quot;229148&quot;</defaultValue>
        <description>For use with HPP FSA return report</description>
        <label>Firm FSA Ref</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_name_of_product__c</fullName>
        <inlineHelpText>Used for letters</inlineHelpText>
        <label>Full name of product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_HPP__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Home Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>Buy to Let Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>Commercial Property Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funds_Released__c</fullName>
        <label>Funds Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPP_Balance__c</fullName>
        <formula>ABS(Account_with_IBB__r.Available_Balance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Live Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Characteristics__c</fullName>
        <defaultValue>&quot;D&quot;</defaultValue>
        <description>For use with HPP FSA return report</description>
        <inlineHelpText>D: Diminishing Musharaka</inlineHelpText>
        <label>HPP Characteristics</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPP_Opportunity_Owner_sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by Sales to update and report on drawdown performance based upon the channel the lead was received from</description>
        <inlineHelpText>FOR SALES USE ONLY PLEASE REFER TO JIM MADDEN IF REQUIRED</inlineHelpText>
        <label>HPP Opportunity Owner (sales)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_MI1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPP_Previous_Month_s_Balance__c</fullName>
        <formula>ABS(Account_with_IBB__r.Previous_Month_s_Balance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP Previous Month&apos;s Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_extended_opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPP extended opportunity</label>
        <referenceTo>HPP_extended_opportunity__c</referenceTo>
        <relationshipLabel>HPP MI</relationshipLabel>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HomeDetails__c</fullName>
        <formula>Text(Primary_Customer_Name__r.Home_Details__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HomeDetails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Buyer_Type__c</fullName>
        <description>For use with HPP FSA return report</description>
        <inlineHelpText>F: First time buyer
M: Home mover                                                                                           
R: Re-finance
C: Council/Registered social landlord exercising their right to buy
O: Other
N: Not known</inlineHelpText>
        <label>Home Buyer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IBBProductID__c</fullName>
        <formula>IBB_Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IBBProductID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IBB Product</label>
        <referenceTo>IBB_Product__c</referenceTo>
        <relationshipLabel>HPP MI</relationshipLabel>
        <relationshipName>HPP_MI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IBB_Solicitors_Confirmation__c</fullName>
        <label>IBB Solicitors Confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IBB_Solicitors__c</fullName>
        <label>IBB Solicitors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SGH Martineau</fullName>
                </value>
                <value>
                    <fullName>Needham &amp; James</fullName>
                </value>
                <value>
                    <fullName>Todds Murray</fullName>
                </value>
                <value>
                    <fullName>Jeffery Green Russell</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>Hinesh</fullName>
                </value>
                <value>
                    <fullName>Shakespear Putsman</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_other_please_specify__c</fullName>
        <label>If other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implied_initial_collateral_value__c</fullName>
        <formula>Finance_Required__c/ ( Finance_Required__c/ Property_Value__c )</formula>
        <label>Implied initial collateral value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Basis__c</fullName>
        <description>For use with HPP FSA return report</description>
        <inlineHelpText>S: Single income
J: Joint income</inlineHelpText>
        <label>Income_Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Verification__c</fullName>
        <description>For use with HPP FSA return report</description>
        <inlineHelpText>Y: Income evidenced
N: Income not evidenced</inlineHelpText>
        <label>Income Verification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>Y</label>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_figure__c</fullName>
        <label>Insurance figure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IntermediaryID__c</fullName>
        <formula>Intermediary__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IntermediaryID</label>
        <type>Text</type>
    </fields>
</CustomObject>